styles/global.scss
$tablet: 769px !default;

@font-face {
  font-family: 'brotherhoodregular';
  src: url('../fonts/brotherhood-webfont.woff2') format('woff2'),
       url('../fonts/brotherhood-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;

}@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,600&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@900&display=swap');

@import "layout.scss";

@mixin rotated-text($num-letters:37, $angle-span: 180deg, $angle-offset: 0) {
  $angle-per-char: $angle-span / $num-letters;
  @for $i from 1 through $num-letters {
    .char#{$i} {
       transform : rotate($angle-span + $i * 10)
    }
  }
}

@mixin mobileView($widthMobile: $tablet){
  @media screen and (max-width: $widthMobile - 1px){
   @content;
  }
}

html strong{
  color: inherit;
}
$msOrange : #FF4000;

html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  line-height: 1.6;
  font-size: 18px;
  overflow: hidden;
}

* {
  box-sizing: border-box;
}

a {
  color: #0070f3;
  text-decoration: none;
  cursor: pointer;
}

a:hover {
  text-decoration: underline;
}

img {
  max-width: 100%;
  display: block;
}

.dash_container {
  display: flex;
  align-items: flex-start;
  label{
    text-transform: uppercase;
    letter-spacing: 0.5px;
  }
}

.field {
  label{
    display: block;
    &.label-field {
      font-weight: bold;
    }
  }

  input {
    display:block;
    height: 45px;
    line-height: 45px;
    margin-bottom:10px;
    border-radius: 3px;
    box-sizing: border-box;
  }
}

.field-flex {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-wrap: nowrap;
  div {
    + div {
      padding-left: 20px;
    }
  }
}


// manage header
.mainHeader {
  padding:29px 104px;
  display: flex;
  flex-wrap: wrap;
  box-sizing: border-box;
  align-items: center;
  position: relative;
  @include mobileView{
    padding: 0 24px;
    z-index: 20001;
  }
  .divHeader {
    width:30%;
    @include mobileView{
      position: relative;
      z-index: 2000001;
    }
    .isOpen {
      position: fixed;
      z-index:10000;
      width:100%;
      top:0;
      left:0;
      .txtLogo{
        @include mobileView{
          .mainMenuNoHome &{
            color:#fff;
            top:16px;
          }
        }
      }
    }
    @include mobileView(){
      > h2 {
        margin: 0;
        @include mobileView{
          .mainMenuNoHome &{
            height:65px;
          }
        }
      }
      text-align:center;
      width: 100%;
    }
  }
  .txtLogo {
    font-family: 'brotherhoodregular';
    @include mobileView(){
      font-size: 28px;
      top: 18px;
      .mainMenuNoHome &{
        top:16px;
      }
    }
    &:hover {
      color: #fff;
      text-decoration: none;
    }
  }
}

.txtLogo {
    color: #FAFAFA;
    font-family: 'brotherhoodregular';
    font-size: 32px;
    letter-spacing: 1.07px;
    line-height: 45px;
    text-align: center;
    @include mobileView{
      font-size: 18px;
      position: relative;
      top: 7px;
    }
}

// menu
.mainMenuNoHome {
  @include mobileView{
    height: 65px;
  }
  .mainHeader{
    padding-top: 0;
    padding-bottom: 0;
    .txtLogo{
      color:#090909;
      @include mobileView{
        color: #090909;
      }
      .homeWrapper & {
        color: #fff;
      }
    }
  }
  .mainMenu {
    height: 104px;
    display: flex;
    align-items: center;
    align-self: flex-end;
    justify-content: flex-end;
    @include mobileView{
      //display: none;
      &.activeMobile {
        width:100%;
        height:100vh;
        position: fixed;
        top:0;
        left:0;
        background:#000;
        z-index: 2000;
        &.isOpen{
          left: 0;
        }
      }
    }
    ul {
      li{
        a{
          color: #090909;

          @include mobileView{
            color: #fff;
          }
        }
      }
    }
  }

  &.mainMenuHomePage {
    .mainMenu {
      ul li {
        a{
          color: #FFF;
        }
      }
    }
  }
}
.mainMenu {
  width: 70%;
  align-items: center;
  &.isOpen {
    display:block;
  }
  @include mobileView{
    // display:none;
    // left:-100vw;
    &.activeMobile {
      width:100vw;
      height:100%;
      position: fixed;
      top:0;
      left:0;
      background:#000;
      z-index: 2000;
    }
  }
  ul {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: flex-end;
    @include mobileView{
      flex-direction: column;
      position: absolute;
      width: 100%;
      height: 100%;
      justify-content: center;
    }
    li {
      padding: 0 20px;
      &:last-child{
        padding: 0;
        @include mobileView{
          padding-top:20px;
        }
      }
      a {
        cursor: pointer;
      }
      @include mobileView{
        color: #FFFFFF;
        font-family: Overpass;
        font-size: 24px;
        font-weight: 900;
        letter-spacing: 0;
        line-height: 37px;
        text-transform: uppercase;
        + li {
          padding-top:20px;
        }
      }
    }
  }
  .menuLink {
      color: #FAFAFA;
      font-size: 16px;
      letter-spacing: 0;
      line-height: 24px;
      font-family: 'Source Sans Pro', sans-serif;
      @include mobileView{
        font-size:32px;
        position: relative;
        &:hover {
          &:before {
            display: block;
          }
        }
        &:before {
          content: "";
          display:none;
          position: absolute;
          bottom: -6px;
          left: 0;
          background: #FF4000;
          width: 100%;
          height: 3px;
        }
      }
    &:hover{
      text-decoration: none;
    }
  }
}
/* ... */

